Create address & contact basic tabs

--- a/locales/de-DE/App.json
+++ b/locales/de-DE/App.json
@@ -274,5 +274,7 @@
   "Contacts": "Kontakte",
   "Advanced operations": "Advanced operations",
   "Show advanced operations": "Show advanced operations",
-  "Open the advanced feature panel.": "Open the advanced feature panel."
+  "Open the advanced feature panel.": "Open the advanced feature panel.",
+  "Last activity": "Last activity",
+  "Never used": "Never used"
 }
