--- a/locales/fr-FR/App.json
+++ b/locales/fr-FR/App.json
@@ -278,5 +278,7 @@
   "Contacts": "Contacts",
   "Advanced operations": "Advanced operations",
   "Show advanced operations": "Show advanced operations",
-  "Open the advanced feature panel.": "Open the advanced feature panel."
+  "Open the advanced feature panel.": "Open the advanced feature panel.",
+  "Last activity": "Last activity",
+  "Never used": "Never used"
 }
