--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -284,5 +284,6 @@
   "Testnet": "Testnet",
   "Localhost": "Localhost",
   "Delete": "Delete",
-  "Timestamp": "Date"
+  "Timestamp": "Date",
+  "Connect wallet to dApp": "Connect wallet to dApp"
 }
