--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -268,5 +268,12 @@
   "Restart the application to install the new update.": "Restart the application to install the new update.",
   "Downloaded {{ percent }}%": "Downloaded {{ percent }}%",
   "Update": "Update",
-  "Download failed, try again later.": "Download failed, try again later."
+  "Download failed, try again later.": "Download failed, try again later.",
+  "Optional passphrase": "Optionale Passphrase",
+  "Pending": "Pending",
+  "Mainnet": "Mainnet",
+  "Testnet": "Testnet",
+  "Localhost": "Localhost",
+  "Delete": "Delete",
+  "Timestamp": "Timestamp"
 }
