--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -285,5 +285,8 @@
   "Localhost": "Localhost",
   "Delete": "Delete",
   "Timestamp": "Date",
-  "Connect wallet to dApp": "Connect wallet to dApp"
+  "Connect wallet to dApp": "Connect wallet to dApp",
+  "This is the default address": "This is the default address",
+  "Set as the default address": "Set as the default address",
+  "Lock wallet": "Lock wallet"
 }
