--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -291,5 +291,9 @@
   "Lock wallet": "Lock wallet",
   "Hide empty addresses": "Hide empty addresses",
   "Addresses allow you to organise your funds. You can create as many as you want!": "Addresses allow you to organise your funds. You can create as many as you want!",
-  "Search for label, a hash or an asset...": "Search for label, a hash or an asset..."
+  "Search for label, a hash or an asset...": "Search for label, a hash or an asset...",
+  "Search for name or a hash...": "Search for name or a hash...",
+  "New contact": "New contact",
+  "Create contacts to avoid mistakes when sending transactions!": "Create contacts to avoid mistakes when sending transactions!",
+  "Edit": "Edit"
 }
