Create assets overview header in overview page

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -34,9 +34,7 @@
   "No transactions to display": "No transactions to display",
   "Invalid password": "Invalid password",
   "Submit": "Submit",
-  "TOTAL BALANCE": "TOTAL BALANCE",
-  "AVAILABLE": "AVAILABLE",
-  "LOCKED": "LOCKED",
+  "Locked": "Locked",
   "Could not fetch data because the wallet is offline": "Could not fetch data because the wallet is offline",
   "Unknown wallet name": "Unknown wallet name",
   "To remove this address from being the default address, you must set another one as default first.": "To remove this address from being the default address, you must set another one as default first.",
@@ -198,8 +196,6 @@
   "Error while fetching data for address {{ hash }}": "Error while fetching data for address {{ hash }}",
   "Error while fetching pending transactions for address {{ hash }}": "Error while fetching pending transactions for address {{ hash }}",
   "Open in explorer": "Open in explorer",
-  "Reduce": "Reduce",
-  "Show addresses": "Show addresses",
   "More info": "More info",
   "passphraseWarningMessage": "<0>This is an advanced feature!</0><br />Use it only if you know what you are doing.<br />Please, read our <5>documentation</5> to learn about it.",
   "welcomeScreenPassphraseMessage": "If you want to use a <1>passphrase</1>, lock your newly created wallet.",
