--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -35,9 +35,7 @@
   "No transactions to display": "Aucune transaction à afficher",
   "Invalid password": "Mot de passe invalide",
   "Submit": "Envoyer",
-  "TOTAL BALANCE": "MONTANT TOTAL",
-  "AVAILABLE": "DISPONIBLE",
-  "LOCKED": "VERROUILLÉ",
+  "Locked": "Verrouillé",
   "Could not fetch data because the wallet is offline": "Impossible de récupérer les données car le wallet est hors ligne.",
   "Unknown wallet name": "Nom de wallet inconnu",
   "To remove this address from being the default address, you must set another one as default first.": "Afin de ne plus faire de cette adresse l'adresse par défaut, merci d'en choisir une autre à la place.",
@@ -199,8 +197,6 @@
   "Error while fetching data for address {{ hash }}": "Erreur lors de la récupération des données de l'adresse {{ hash }}",
   "Error while fetching pending transactions for address {{ hash }}": "Erreur durant la récupération de transactions en attente pour l'adresse {{ hash }}",
   "Open in explorer": "Ouvrir dans l'explorer",
-  "Reduce": "Réduire",
-  "Show addresses": "Montrer les adresses",
   "More info": "Plus d'infos",
   "passphraseWarningMessage": "<0>Ceci est une fonctionnalité avancée !</0><br />Utilisez la seulement si vous savez ce que vous faites.<br />Lisez notre <5>documentation</5> pour en apprendre plus.",
   "welcomeScreenPassphraseMessage": "Si vous désirez utiliser une <1>phrase de passe</1>, verrouillez votre wallet fraîchement créé.",
