--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -34,9 +34,7 @@
   "No transactions to display": "Không có giao dịch nào để hiển thị",
   "Invalid password": "Mật khẩu không chính xác",
   "Submit": "Gửi",
-  "TOTAL BALANCE": "TỔNG SỐ DƯ",
-  "AVAILABLE": "KHẢ DỤNG",
-  "LOCKED": "KHOÁ",
+  "Locked": "Locked",
   "Could not fetch data because the wallet is offline": "Không thể đẩy dữ liệu vì ví đang ngoại tuyến",
   "Unknown wallet name": "Tên ví không xác định",
   "To remove this address from being the default address, you must set another one as default first.": "Bạn cần phải đặt một địa chỉ ví mặc định mới trước khi gỡ nhãn mặc định địa chỉ ví này.",
@@ -198,8 +196,6 @@
   "Error while fetching data for address {{ hash }}": "Đã xãy ra lỗi trong quá trình tải dữ liệu cho ví {{ hash }}",
   "Error while fetching pending transactions for address {{ hash }}": "Đã xãy ra lỗi trong quá trình tải dữ liệu giao dịch đang chờ cho địa chỉ ví {{ hash }}",
   "Open in explorer": "Xem trên explorer",
-  "Reduce": "Reduce",
-  "Show addresses": "Hiện địa chỉ ví",
   "More info": "Thông tin thêm",
   "passphraseWarningMessage": "<0>Đây là một tính năng nâng cao!</0><br />Chỉ sử dụng tính năng này nếu bạn biết về chúng.<br />Vui lòng tham khảo tài liệu <5>documentation</5> để biết thêm thông tin chi tiết.",
   "welcomeScreenPassphraseMessage": "Nếu bạn muốn sử dụng một <1>passphrase</1>, khoá ví vừa mới tạo.",
