Create scaffolding for Transfers page

--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -304,5 +304,6 @@
   "Addresses": "Addresses",
   "Developer tools": "Developer tools",
   "Enable developer tools": "Enable developer tools",
-  "Deploy and call smart contracts": "Deploy and call smart contracts"
+  "Deploy and call smart contracts": "Deploy and call smart contracts",
+  "Transfers": "Transfers"
 }
