--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -303,5 +303,6 @@
   "Addresses": "Adressen",
   "Developer tools": "Developer tools",
   "Enable developer tools": "Enable developer tools",
-  "Deploy and call smart contracts": "Deploy and call smart contracts"
+  "Deploy and call smart contracts": "Deploy and call smart contracts",
+  "Transfers": "Transfers"
 }
