--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -308,5 +308,7 @@
   "Enable developer tools": "Enable developer tools",
   "Deploy and call smart contracts": "Deploy and call smart contracts",
   "Transfers": "Transfers",
-  "Lock time must be in the future.": "Lock time must be in the future."
+  "Lock time must be in the future.": "Lock time must be in the future.",
+  "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.": "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.",
+  "Gas price must be greater than {{ amount }}": "Gas price must be greater than {{ amount }}"
 }
