Update FR translations

--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -122,7 +122,7 @@
   "Inputs": "Entrants",
   "Outputs": "Sortants",
   "New version": "Nouvelle version",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "La nouvelle version {{ newVersion }} est disponible. Téléchargez et installez la pour éviter les problèmes de fonctionnement.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "La version {{ newVersion }} est disponible. Téléchargez et installez la pour éviter les problèmes de fonctionnement.",
   "Download": "Télécharger",
   "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.": "Assurez-vous de garder votre phrase de récupération en lieu sûr pour pouvoir restorer votre wallet dans le futur. Sans la phrase, votre wallet sera perdu pour toujours.",
   "Not your keys, not your coins.": "Pas vos clés, pas votre argent.",
@@ -168,7 +168,7 @@
   "Select the words in the right order. Ready?": "Sélectionnez les mots dans le bon ordre. Prêt ?",
   "Ready!": "C'est parti !",
   "Something went wrong when creating encrypted wallet.": "Erreur lors de la création du wallet crypté.",
-  "Select the words in the right order.": "Sélectionez les mots dans le bon ordre.",
+  "Select the words in the right order.": "Sélectionnez les mots dans le bon ordre.",
   "It seems like you made a mistake in the words' order. But don't worry, you can reorder the words by dragging them around.": "Il semble que vous aillez fait une erreur dans l'ordre des mots. Mais pas de problème, vous pouvez réordonner les mots en les faisant glisser.",
   "Great job! Remember to keep those words safe.": "Beau travail ! Gardez bien ces mots en sécurité.",
   "Continue": "Continuer",
@@ -221,7 +221,7 @@
   "Language": "Langue",
   "Change the wallet language": "Changer la langue du wallet",
   "Activate dark mode": "Activer le mode sombre",
-  "Pick a color": "Choissez une couleur",
+  "Pick a color": "Choisissez une couleur",
   "Close": "Fermer",
   "Tab navigation": "Navigation par tab",
   "Make this your default address": "Choisir comme adresse par défaut",
@@ -239,43 +239,43 @@
   "ALPH amount": "Montant en ALPH",
   "Set lock time": "Régler le temps de verrouillage",
   "Tweak gas settings": "Ajuster les paramètres du gaz",
-  "Call contract": "Call contract",
-  "Deploy contract": "Deploy contract",
-  "Issue token amount": "Issue token amount",
-  "Tokens to issue (optional)": "Tokens to issue (optional)",
+  "Call contract": "Appeller un contrat",
+  "Deploy contract": "Deployer un contrat",
+  "Issue token amount": "Nombre de tokens à créer",
+  "Tokens to issue (optional)": "Tokens à créer (optionnel)",
   "Gas": "Gas",
-  "Review": "Review",
-  "Invalid address group for the WallectConnect connection": "Invalid address group for the WallectConnect connection",
-  "Error in pairing": "Error in pairing",
-  "WalletConnect error": "WalletConnect error",
-  "Try again": "Try again",
-  "Connect to a dApp": "Connect to a dApp",
-  "Paste what was copied from the dApp": "Paste what was copied from the dApp",
-  "Connect": "Connect",
-  "Approve the proposal to connect": "Approve the proposal to connect",
-  "Please review the following before authorizing the dApp": "Please review the following before authorizing the dApp",
-  "Name": "Name",
+  "Review": "Vérification",
+  "Invalid address group for the WallectConnect connection": "Groupe de l’adresse invalide pour la connection WalletConnect",
+  "Error in pairing": "Erreur lors du jumelage",
+  "WalletConnect error": "Erreur WalletConnect",
+  "Try again": "Essayez de nouveau",
+  "Connect to a dApp": "Se connecter à une dApp",
+  "Paste what was copied from the dApp": "Collez ce qui a été copié depuis la dApp",
+  "Connect": "Se connecter",
+  "Approve the proposal to connect": "Approuvez la proposition de connexion",
+  "Please review the following before authorizing the dApp": "Passez en revue les paramètres suivants avant d’autoriser la dApp",
+  "Name": "Nom",
   "URL": "URL",
   "Description": "Description",
-  "Network ID": "Network ID",
-  "Address group": "Address group",
-  "all": "all",
-  "Signer address": "Signer address",
-  "Select an address to sign with.": "Select an address to sign with.",
-  "Reject": "Reject",
-  "Approve": "Approve",
-  "Unable to convert the amount": "Unable to convert the amount",
-  "The amount must be greater than {{ minAmount }}": "The amount must be greater than {{ minAmount }}",
-  "Restart the application to install the new update.": "Restart the application to install the new update.",
-  "Downloaded {{ percent }}%": "Downloaded {{ percent }}%",
-  "Update": "Update",
-  "Download failed, try again later.": "Download failed, try again later.",
+  "Network ID": "ID du réseau",
+  "Address group": "Groupe de l’adresse",
+  "all": "tous",
+  "Signer address": "Adresse de signature",
+  "Select an address to sign with.": "Sélectionnez une adresse à utiliser pour la signature.",
+  "Reject": "Rejeter",
+  "Approve": "Approuver",
+  "Unable to convert the amount": "Impossible de convertir le montant",
+  "The amount must be greater than {{ minAmount }}": "Le montant doit être supérieur à {{ minAmount }}",
+  "Restart the application to install the new update.": "Redémarrer l’application afin d'installer la nouvelle version.",
+  "Downloaded {{ percent }}%": "{{ percent }}% téléchargé",
+  "Update": "Mettre à jour",
+  "Download failed, try again later.": "Le téléchargement a échoué, essayez à nouveau.",
   "Optional passphrase": "Phrase de passe optionelle",
   "Pending": "En attente",
   "Mainnet": "Mainnet",
   "Testnet": "Testnet",
   "Localhost": "Localhost",
-  "Delete": "Delete",
+  "Delete": "Supprimer",
   "Timestamp": "Date",
-  "Lock time must be in the future.": "Lock time must be in the future."
+  "Lock time must be in the future.": "Le temps de verrouillage doit être dans le futur."
 }
