--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -310,5 +310,6 @@
   "Lock time must be in the future.": "Lock time must be in the future.",
   "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.": "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.",
   "Gas price must be greater than {{ amount }}": "Gas price must be greater than {{ amount }}",
-  "Smart contract": "Smart contract"
+  "Smart contract": "Smart contract",
+  "All transactions loaded!": "All transactions loaded!"
 }
