--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -1,25 +1,25 @@
 {
   "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "Par défaut, l'adresse est générée dans un groupe aléatoire. Vous pouvez sélectionner le groupe de votre choix dans les paramètres avancés.",
-  "Use an existing wallet": "Utiliser un wallet existant",
-  "Please choose whether you want to create a new wallet or import an existing one.": "Désirez-vous créer un nouveau wallet ou en importer un ?",
-  "New wallet": "Nouveau wallet",
-  "Import wallet": "Importer un wallet",
+  "Use an existing wallet": "Utiliser un portefeuille existant",
+  "Please choose whether you want to create a new wallet or import an existing one.": "Désirez-vous créer un nouveau portefeuille ou en importer un ?",
+  "New wallet": "Nouveau portefeuille",
+  "Import wallet": "Importer un portefeuille",
   "Amount must be greater than {{ minAmountInAlph }}": "Le montant doit être supérieur à {{ minAmountInAlph }}",
   "Could not connect to the {{ currentNetwork }} network.": "Impossible de se connecter au réseau {{ currentNetwork }}.",
   "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Notez que si l'option est activée, \"{{ address }}\" ne sera plus l'adresse par défaut.",
   "Error while sweeping address {{ from }}": "Erreur lors du nettoyage de l'address {{ from }}",
-  "Remove wallet \"{{ walletName }}\"": "Supprimer le wallet \"{{ walletName }}\"",
+  "Remove wallet \"{{ walletName }}\"": "Supprimer le portefeuille \"{{ walletName }}\"",
   "Enter password for \"{{ switchToWalletName }}\"": "Entrez un mot de passe pour \"{{ switchToWalletName }}\"",
   "{{ amount }} words entered": "{{ amount }} mots inscrits",
   "Address label": "Label de l'adresse",
-  "The wallet is offline.": "Le wallet est hors ligne.",
+  "The wallet is offline.": "Le portefeuille est hors ligne.",
   "Discreet mode": "Mode discret",
   "Default address": "Adresse par défaut",
   "Settings": "Paramètres",
   "Copied to clipboard!": "Copié dans le presse-papiers !",
   "Copy to clipboard": "Copier dans le presse-papiers",
   "Copied": "Copié",
-  "Official Wallet": "Wallet officiel",
+  "Official Wallet": "Portefeuille officiel",
   "The easiest way to get started with Alephium.": "Le moyen le plus simple de commencer avec Alephium.",
   "Genesis TX": "TX Genesis",
   "Mining Rewards": "Récompenses de minage",
@@ -38,8 +38,8 @@
   "TOTAL BALANCE": "MONTANT TOTAL",
   "AVAILABLE": "DISPONIBLE",
   "LOCKED": "VERROUILLÉ",
-  "Could not fetch data because the wallet is offline": "Impossible de récupérer les données car le wallet est hors ligne.",
-  "Unknown wallet name": "Nom de wallet inconnu",
+  "Could not fetch data because the wallet is offline": "Impossible de récupérer les données car le portefeuille est hors ligne.",
+  "Unknown wallet name": "Nom de portefeuille inconnu",
   "To remove this address from being the default address, you must set another one as default first.": "Afin de ne plus faire de cette adresse l'adresse par défaut, merci d'en choisir une autre à la place.",
   "Address options": "Paramètres de l'adresse",
   "Sweep address": "Nettoyer l'adresse",
@@ -64,8 +64,8 @@
   "Secret recovery phrase": "Phrase de récupération",
   "Type your password to show the phrase.": "Entrez votre mot de passe pour afficher la phrase.",
   "Show": "Afficher",
-  "Carefully note down the words! They are your wallet's secret recovery phrase.": "Gardez ces mots précieusement ! Ils sont la clé pour accéder et récupérer votre wallet.",
-  "No recovery phrase was stored along with this wallet": "Aucune phrase de récupération n'a été enregistrée avec ce wallet",
+  "Carefully note down the words! They are your wallet's secret recovery phrase.": "Gardez ces mots précieusement ! Ils sont la clé pour accéder et récupérer votre portefeuille.",
+  "No recovery phrase was stored along with this wallet": "Aucune phrase de récupération n'a été enregistrée avec ce portefeuille",
   "Expected fee": "Frais estimés",
   "Address format is incorrect": "Le format de l'adresse n'est pas correct",
   "Select the address to send funds from.": "Sélectionnez l'adresse vers laquelle envoyer les fonds.",
@@ -82,7 +82,7 @@
   "Error while sending the transaction": "Erreur en envoyant la transaction",
   "Enter your password to send the transaction.": "Entrez votre mot de passe pour envoyer la transaction.",
   "Lock time": "Temps de verrouillage",
-  "Duration in minutes after which an idle wallet will lock automatically.": "Durée en minutes après laquelle un wallet en veille se verrouillera automatiquement.",
+  "Duration in minutes after which an idle wallet will lock automatically.": "Durée en minutes après laquelle un portefeuille en veille se verrouillera automatiquement.",
   "Minutes": "Minutes",
   "Off": "Off",
   "Theme": "Thème",
@@ -99,16 +99,16 @@
   "Node host": "Hôte du noeud",
   "Explorer API host": "Hôte de l'API explorer",
   "Explorer URL": "URL de l'explorer",
-  "Wallet list": "Liste des wallets",
-  "Current wallet": "Wallet actif",
-  "Wallet name": "Nom du wallet",
-  "Lock current wallet": "Verrouiller ce wallet",
+  "Wallet list": "Liste des portefeuilles",
+  "Current wallet": "Portefeuille actif",
+  "Wallet name": "Nom du portefeuille",
+  "Lock current wallet": "Verrouiller ce portefeuille",
   "Show your secret recovery phrase": "Montrer votre phrase de récupération",
-  "Remove current wallet": "Supprimer ce wallet",
+  "Remove current wallet": "Supprimer ce portefeuille",
   "Version": "Version",
   "General": "Général",
   "Networks": "Réseaux",
-  "Wallets": "Wallets",
+  "Wallets": "Portefeuilles",
   "from": "depuis",
   "to": "vers",
   "in": "dans",
@@ -124,11 +124,11 @@
   "New version": "Nouvelle version",
   "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "La version {{ newVersion }} est disponible. Téléchargez et installez la pour éviter les problèmes de fonctionnement.",
   "Download": "Télécharger",
-  "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.": "Assurez-vous de garder votre phrase de récupération en lieu sûr pour pouvoir restorer votre wallet dans le futur. Sans la phrase, votre wallet sera perdu pour toujours.",
+  "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.": "Assurez-vous de garder votre phrase de récupération en lieu sûr pour pouvoir restorer votre portefeuille dans le futur. Sans la phrase, votre portefeuille sera perdu pour toujours.",
   "Not your keys, not your coins.": "Pas vos clés, pas votre argent.",
   "CONFIRM REMOVAL": "CONFIRMER LA SUPPRESSION",
-  "Wallet": "Wallet",
-  "Select a wallet": "Sélectionner un wallet",
+  "Wallet": "Portefeuille",
+  "Select a wallet": "Sélectionner un portefeuille",
   "Address details": "Détails de l'adresse",
   "Address": "Adresse",
   "Number of transactions": "Nombre de transactions",
@@ -156,8 +156,8 @@
   "Refresh data": "Rafraîchir les données",
   "Alephium Logo": "Logo Alephium",
   "Alephium": "Alephium",
-  "WALLET": "WALLET",
-  "CURRENT WALLET": "WALLET ACTIF",
+  "WALLET": "PORTEFEUILLE",
+  "CURRENT WALLET": "PORTEFEUILLE ACTIF",
   "MENU": "MENU",
   "Overview": "Vue d'ensemble",
   "Lock": "Verrouiller",
@@ -167,25 +167,25 @@
   "Alright! Time to check if you got your words right!": "Ok ! Il est temps de vérifier que vos mots sont corrects !",
   "Select the words in the right order. Ready?": "Sélectionnez les mots dans le bon ordre. Prêt ?",
   "Ready!": "C'est parti !",
-  "Something went wrong when creating encrypted wallet.": "Erreur lors de la création du wallet crypté.",
+  "Something went wrong when creating encrypted wallet.": "Erreur lors de la création du portefeuille crypté.",
   "Select the words in the right order.": "Sélectionnez les mots dans le bon ordre.",
   "It seems like you made a mistake in the words' order. But don't worry, you can reorder the words by dragging them around.": "Il semble que vous aillez fait une erreur dans l'ordre des mots. Mais pas de problème, vous pouvez réordonner les mots en les faisant glisser.",
   "Great job! Remember to keep those words safe.": "Beau travail ! Gardez bien ces mots en sécurité.",
   "Continue": "Continuer",
   "Password is too weak": "Votre mot de passe est trop faible",
   "Insecure password": "Le mot de passe n'est pas sûr",
-  "Wallet name is too short": "Le nom du wallet est trop court",
-  "Wallet name already taken": "Le nom du wallet est déjà pris",
-  "New wallet name": "Nouveau nom de wallet",
+  "Wallet name is too short": "Le nom du portefeuille est trop court",
+  "Wallet name already taken": "Le nom du portefeuille est déjà pris",
+  "New wallet name": "Nouveau nom de portefeuille",
   "New password": "Nouveau mot de passe",
   "Retype password": "Répéter le mot de passe",
   "Passwords are different": "Les mots de passe sont différents",
   "Make sure to keep your password secured as it cannot be changed in the future.": "Assurez-vous de garder votre mot de passe en sécurité, car il ne peut pas être changé par la suite.",
-  "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium n'a pas accès à votre wallet.\nVous êtes le seul propriétaire.",
+  "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium n'a pas accès à votre portefeuille.\nVous êtes le seul propriétaire.",
   "Back": "Retour",
   "Type your recovery phrase": "Taper votre phrase de récupération",
-  "Error while importing wallet": "Erreur lors de l'importation du wallet",
-  "Make sure to store the words in a secure location! They are your wallet's secret recovery phrase.": "Assurez-vous de garder les mots dans un lieu sûr. Ils sont les clés pour pouvoir récupérer votre wallet.",
+  "Error while importing wallet": "Erreur lors de l'importation du portefeuille",
+  "Make sure to store the words in a secure location! They are your wallet's secret recovery phrase.": "Assurez-vous de garder les mots dans un lieu sûr. Ils sont les clés pour pouvoir récupérer votre portefeuille.",
   "All good? Let's continue!": "Tout bon ? Continuons !",
   "Everything is ready!": "Tout est prêt !",
   "Welcome to Alephium.": "Bienvenue chez Alephium.",
@@ -195,15 +195,15 @@
   "Hide advanced options": "Cacher les options avancées",
   "For mining or DeFi use.": "Pour le minage our l'usage DeFi.",
   "Address copied to clipboard!": "L'adresse a été copiée dans le presse papiers !",
-  "Your Wallet": "Votre wallet",
+  "Your Wallet": "Votre portefeuille",
   "Your address": "Votre adresse",
   "I've copied the words, continue": "J'ai copié les mots, continuons",
   "Advanced operations reserved to more experienced users. A \"normal\" user should not need to use them very often, if not at all.": "Opérations réservées aux utilisateurs avancés. Un utilisateur \"normal\" ne devrait pas avoir besoin de les utiliser.",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Il semblerait que votre wallet ait trop de UTXOs pour pouvoir envoyer cette transaction. Il vous faut d'abord consolider (fusionner) vos UTXOs (des frais s'appliquent).",
   "Welcome!": "Bienvenue !",
   "Welcome back!": "De retour !",
-  "Please choose a wallet and enter your password to continue.": "Choisissez un wallet et entrez votre mot de passe pour continuer.",
-  "Create / import a new wallet": "Créer / importer un nouveau wallet",
+  "Please choose a wallet and enter your password to continue.": "Choisissez un portefeuille et entrez votre mot de passe pour continuer.",
+  "Create / import a new wallet": "Créer / importer un nouveau portefeuille",
   "(current)": "(actif)",
   "Default address for sending transactions.": "Adresse par défaut pour effectuer des transactions.",
   "Error while fetching data for address {{ hash }}": "Erreur lors de la récupération des données de l'adresse {{ hash }}",
@@ -213,13 +213,13 @@
   "Show addresses": "Montrer les adresses",
   "More info": "Plus d'infos",
   "passphraseWarningMessage": "<0>Ceci est une fonctionnalité avancée !</0><br />Utilisez la seulement si vous savez ce que vous faites.<br />Lisez notre <5>documentation</5> pour en apprendre plus.",
-  "welcomeScreenPassphraseMessage": "Si vous désirez utiliser une <1>phrase de passe</1>, verrouillez votre wallet fraîchement créé.",
+  "welcomeScreenPassphraseMessage": "Si vous désirez utiliser une <1>phrase de passe</1>, verrouillez votre portefeuille fraîchement créé.",
   "I have read and understood the documentation": "J'ai lu et compris la documentation",
   "Use optional passphrase (advanced)": "Utiliser la phrase de passe optionnelle (avancé)",
   "Confirm passphrase": "Confirmer la phrase de passe",
   "Passphrases don't match": "Les phrases de passe ne sont pas identiques",
   "Language": "Langue",
-  "Change the wallet language": "Changer la langue du wallet",
+  "Change the wallet language": "Changer la langue du portefeuille",
   "Activate dark mode": "Activer le mode sombre",
   "Pick a color": "Choisissez une couleur",
   "Close": "Fermer",
