--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -311,5 +311,6 @@
   "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.": "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.",
   "Gas price must be greater than {{ amount }}": "Gas price must be greater than {{ amount }}",
   "Smart contract": "Smart contract",
-  "All transactions loaded!": "All transactions loaded!"
+  "All transactions loaded!": "All transactions loaded!",
+  "Tokens": "Tokens"
 }
