--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -313,5 +313,7 @@
   "Smart contract": "Smart contract",
   "All transactions loaded!": "All transactions loaded!",
   "Tokens": "Tokens",
-  "Today": "Heute"
+  "Today": "Heute",
+  "NFTs": "NFTs",
+  "Coming soon!": "Coming soon!"
 }
