--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -314,5 +314,7 @@
   "Smart contract": "Smart contract",
   "All transactions loaded!": "All transactions loaded!",
   "Tokens": "Tokens",
-  "Today": "Today"
+  "Today": "Today",
+  "NFTs": "NFTs",
+  "Coming soon!": "Coming soon!"
 }
