Create address details modal

--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -315,5 +315,8 @@
   "Tokens": "Tokens",
   "Today": "Heute",
   "NFTs": "NFTs",
-  "Coming soon!": "Coming soon!"
+  "Coming soon!": "Coming soon!",
+  "Address tokens": "Address tokens",
+  "Address NFTs": "Address NFTs",
+  "Your tokens will appear here.": "Your tokens will appear here."
 }
