--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -316,5 +316,8 @@
   "Tokens": "Tokens",
   "Today": "Today",
   "NFTs": "NFTs",
-  "Coming soon!": "Coming soon!"
+  "Coming soon!": "Coming soon!",
+  "Address tokens": "Address tokens",
+  "Address NFTs": "Address NFTs",
+  "Your tokens will appear here.": "Your tokens will appear here."
 }
