--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -319,5 +319,6 @@
   "Address tokens": "Address tokens",
   "Address NFTs": "Address NFTs",
   "Your tokens will appear here.": "Your tokens will appear here.",
-  "Address transactions": "Address transactions"
+  "Address transactions": "Address transactions",
+  "Address settings": "Address settings"
 }
